@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.292 (gritter) 1/8/05
+.\"     Sccsid: @(#)nail.1	2.293 (gritter) 1/10/05
 .\"
-.TH NAIL 1 "1/8/05" "nail 11.20" "User Commands"
+.TH NAIL 1 "1/10/05" "nail 11.20" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -702,7 +702,15 @@ in any of the given character sets,
 the message will not be sent,
 and its text will be saved to the `dead.letter' file.
 Messages that contains NUL bytes are not converted.
-Attachments are also not converted even if they are plain text.
+.PP
+Outgoing attachments are also not converted even if they are plain text.
+If the
+.I sendcharsets
+variable contains more than one character set name,
+the
+.I ~@
+tilde escape will ask for the character sets for individual attachments
+if it is invoked without arguments.
 .PP
 Best results are usually achieved
 when
